# tds-virtual-ta

./: .gitignore  main.py  openrouter_key.json  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  requirements.txt  vercel.json
app/: api.py  compute_embeddings.py  embed_chunks.py  embeddings_file_size_reducer.py  search.py
