[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.6",
    "requests>=2.32.4",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
